--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,1 +1,8 @@
 <h1>These are your tasks</h1>
+
+<ul>
+  <% @tasks.each do |task| %>
+    <li> <%= task.title %> </li>
+    <%# <li> <%= link_to "task.title", task_path(task)%>  <%#</li>%>
+  <% end %>
+</ul>
