--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,7 +2,6 @@
 
 <ul>
   <% @tasks.each do |task| %>
-    <li> <%= task.title %> </li>
-    <%# <li> <%= link_to "task.title", task_path(task)%>  <%#</li>%>
+    <li> <%= link_to task.title, task_path(task)%>  </li>
   <% end %>
 </ul>
