--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,6 +2,9 @@
 
 <ul>
   <% @tasks.each do |task| %>
-    <li> <%= link_to task.title, task_path(task)%>  </li>
+    <li> <%= link_to task.title, task_path(task)%> <%= link_to "Destroy", task_path(task), method: :delete, data: { confirm: "Are you sure?"} %>
+ </li>
   <% end %>
 </ul>
+
+<%= link_to "Add a new task", new_task_path%>
