--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,10 +1,3 @@
 <h1>Create a new task</h1>
 
-
-<%= form_for(@task) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title, placeholder: "Your next task" %>
-  <%= f.label :details %>
-  <%= f.text_field :details, placeholder: "Exactly HOW" %>
-  <%= f.submit %>
-<% end %>
+<%= render "form", task: @task %>
