--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,2 +1,5 @@
 <h1><%= @task.title %></h1>
 <p><%= @task.details %></p>
+
+<%= link_to "Edit task", edit_task_path%>
+<%= link_to "Back to list", tasks_path%>
