exo done and CLEARED

--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -3,5 +3,6 @@
   <%= f.text_field :title, placeholder: "Your next task" %>
   <%= f.label :details %>
   <%= f.text_field :details, placeholder: "Exactly HOW" %>
-  <%= f.submit class: "btn btn-info" %>
+  <%= f.check_box :completed %>
+  <%= f.submit class: "btn btn-warning" %>
 <% end %>
