--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,7 +3,12 @@
 <ul>
   <% @tasks.each do |task| %>
     <li> <%= link_to task.title, task_path(task)%> <%= link_to "Destroy", task_path(task), method: :delete, data: { confirm: "Are you sure?"} %>
- </li>
+        <% if task.completed %>
+        <i class="far fa-check-square"></i>
+        <% else %>
+        <i class="far fa-square"></i>
+        <% end %>
+    </li>
   <% end %>
 </ul>
 
